--- a/day4-lunch/Day4-lunch.ipynb
+++ b/day4-lunch/Day4-lunch.ipynb
@@ -1,22 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 62,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['\"DNaseII\";', 18019375, 18021161]\n"
-     ]
-    }
-   ],
    "source": [
+    "# Implement Binary Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#open file \n",
     "fs = open('/Users/cmdb/qbb2020-answers/day4-lunch/BDGP6.Ensembl.81.gtf' , 'r')\n",
+    "#create list for fields of interest to be stored\n",
     "foi= []\n",
-    "\n",
+    "###sparse through files ignoring biotypes that are not protein coding\n",
     "for line in fs:\n",
     "    if 'protein_coding' not in line:\n",
     "        continue      \n",
@@ -35,14 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"tin\";\n"
+      "\"tin\";\n",
+      "13\n"
      ]
     }
    ],
@@ -54,8 +56,9 @@
     "\n",
     "pos = 21378950\n",
     "counter = 0\n",
-    "\n",
+    "counter2 = 0\n",
     "while counter < 1:\n",
+    "    counter2 +=1\n",
     "    if high == low + 1:\n",
     "        if (pos - foi[low][2]) > (foi[high][1] - pos):\n",
     "            print(foi[high][0])\n",
@@ -73,6 +76,7 @@
     "        else:\n",
     "            print(foi[pos][0])\n",
     "            counter +=1\n",
+    "print(counter2)\n",
     "        \n",
     "\n",
     "         "
