--- a/day4-lunch/Day4-lunch.ipynb
+++ b/day4-lunch/Day4-lunch.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -61,10 +61,10 @@
     "    counter2 +=1\n",
     "    if high == low + 1:\n",
     "        if (pos - foi[low][2]) > (foi[high][1] - pos):\n",
-    "            print(foi[high][0])\n",
+    "            output =(foi[high])\n",
     "            counter +=1\n",
     "        elif (pos - foi[low][2]) < (foi[high][1] - pos):\n",
-    "            print(foi[low][0])\n",
+    "            output =(foi[low])\n",
     "            counter +=1\n",
     "    else:\n",
     "        if pos < foi[mid][1]:\n",
@@ -74,12 +74,37 @@
     "            low = mid\n",
     "            mid = int((high + low)/2)\n",
     "        else:\n",
-    "            print(foi[pos][0])\n",
+    "            output =(foi[pos])\n",
     "            counter +=1\n",
-    "print(counter2)\n",
-    "        \n",
+    "            \n",
     "\n",
-    "         "
+    "print(output[0])\n",
+    "print(counter2)         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "if output[1] > pos:\n",
+    "    dist = output[1] - pos\n",
+    "    print(dist)\n",
+    "elif output[1] < pos:\n",
+    "    dist = pos - output[1]\n",
+    "    print(dist)\n",
+    "elif:\n",
+    "    dist= output[2] - pos\n",
+    "    print(dist)"
    ]
   },
   {
