--- a/day4-lunch/Day4-lunch.ipynb
+++ b/day4-lunch/Day4-lunch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,21 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"tin\";\n",
-      "13\n"
+      "Closest gene is \"tin\";\n",
+      "Loop count is 13\n"
      ]
     }
    ],
    "source": [
     "low = 0\n",
-    "high = len(foi)\n",
+    "high = (len(foi) - 1)\n",
     "mid= int(len(foi)/2)\n",
     "\n",
     "\n",
@@ -78,8 +78,8 @@
     "            counter +=1\n",
     "            \n",
     "\n",
-    "print(output[0])\n",
-    "print(counter2)         "
+    "print('Closest gene is', output[0])\n",
+    "print('Loop count is', counter2)         "
    ]
   },
   {
@@ -102,9 +102,9 @@
     "elif output[1] < pos:\n",
     "    dist = pos - output[1]\n",
     "    print(dist)\n",
-    "elif:\n",
+    "else:\n",
     "    dist= output[2] - pos\n",
-    "    print(dist)"
+    "    print('Distance from gene ', dist)"
    ]
   },
   {
