--- a/Day5-lunch/Day5-lunch.ipynb
+++ b/Day5-lunch/Day5-lunch.ipynb
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "  <th>Date:</th>             <td>Fri, 04 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>1.55e-84</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>15:03:08</td>     <th>  Log-Likelihood:    </th> <td> -1191.6</td>\n",
+       "  <th>Time:</th>                 <td>15:23:25</td>     <th>  Log-Likelihood:    </th> <td> -1191.6</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   396</td>      <th>  AIC:               </th> <td>   2387.</td>\n",
@@ -826,7 +826,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.618\n",
        "Method:                 Least Squares   F-statistic:                     639.6\n",
        "Date:                Fri, 04 Sep 2020   Prob (F-statistic):           1.55e-84\n",
-       "Time:                        15:03:08   Log-Likelihood:                -1191.6\n",
+       "Time:                        15:23:25   Log-Likelihood:                -1191.6\n",
        "No. Observations:                 396   AIC:                             2387.\n",
        "Df Residuals:                     394   BIC:                             2395.\n",
        "Df Model:                           1                                         \n",
@@ -848,7 +848,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 165,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,6 +988,217 @@
     "ax.hist(df_final['mat_dnm'], alpha = 0.5)\n",
     "ax.hist(df_final['pat_dnm'], alpha = 0.5)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-53.403565287269245, pvalue=2.1986031793078793e-264)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(df_final['mat_dnm'], df_final['pat_dnm'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 2.927974\n",
+      "         Iterations 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Poisson Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>        <td>mat_dnm</td>     <th>  No. Observations:  </th>  <td>   396</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                <td>Poisson</td>     <th>  Df Residuals:      </th>  <td>   394</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>  <td>     1</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Fri, 04 Sep 2020</td> <th>  Pseudo R-squ.:     </th>  <td>0.07164</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>15:28:13</td>     <th>  Log-Likelihood:    </th> <td> -1159.5</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -1248.9</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>     <td>nonrobust</td>    <th>  LLR p-value:       </th> <td>8.241e-41</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "       <td></td>         <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>  <td>    1.7671</td> <td>    0.060</td> <td>   29.235</td> <td> 0.000</td> <td>    1.649</td> <td>    1.886</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Mother_age</th> <td>    0.0281</td> <td>    0.002</td> <td>   13.582</td> <td> 0.000</td> <td>    0.024</td> <td>    0.032</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                          Poisson Regression Results                          \n",
+       "==============================================================================\n",
+       "Dep. Variable:                mat_dnm   No. Observations:                  396\n",
+       "Model:                        Poisson   Df Residuals:                      394\n",
+       "Method:                           MLE   Df Model:                            1\n",
+       "Date:                Fri, 04 Sep 2020   Pseudo R-squ.:                 0.07164\n",
+       "Time:                        15:28:13   Log-Likelihood:                -1159.5\n",
+       "converged:                       True   LL-Null:                       -1248.9\n",
+       "Covariance Type:            nonrobust   LLR p-value:                 8.241e-41\n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept      1.7671      0.060     29.235      0.000       1.649       1.886\n",
+       "Mother_age     0.0281      0.002     13.582      0.000       0.024       0.032\n",
+       "==============================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_model = smf.poisson(formula = 'mat_dnm ~ Mother_age', data = df_final)\n",
+    "results_mat = model.fit()\n",
+    "results_mat.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 2.927974\n",
+      "         Iterations 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Poisson Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>        <td>mat_dnm</td>     <th>  No. Observations:  </th>  <td>   396</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                <td>Poisson</td>     <th>  Df Residuals:      </th>  <td>   394</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>  <td>     1</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Fri, 04 Sep 2020</td> <th>  Pseudo R-squ.:     </th>  <td>0.07164</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>15:31:12</td>     <th>  Log-Likelihood:    </th> <td> -1159.5</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -1248.9</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>     <td>nonrobust</td>    <th>  LLR p-value:       </th> <td>8.241e-41</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "       <td></td>         <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>  <td>    1.7671</td> <td>    0.060</td> <td>   29.235</td> <td> 0.000</td> <td>    1.649</td> <td>    1.886</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Mother_age</th> <td>    0.0281</td> <td>    0.002</td> <td>   13.582</td> <td> 0.000</td> <td>    0.024</td> <td>    0.032</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                          Poisson Regression Results                          \n",
+       "==============================================================================\n",
+       "Dep. Variable:                mat_dnm   No. Observations:                  396\n",
+       "Model:                        Poisson   Df Residuals:                      394\n",
+       "Method:                           MLE   Df Model:                            1\n",
+       "Date:                Fri, 04 Sep 2020   Pseudo R-squ.:                 0.07164\n",
+       "Time:                        15:31:12   Log-Likelihood:                -1159.5\n",
+       "converged:                       True   LL-Null:                       -1248.9\n",
+       "Covariance Type:            nonrobust   LLR p-value:                 8.241e-41\n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept      1.7671      0.060     29.235      0.000       1.649       1.886\n",
+       "Mother_age     0.0281      0.002     13.582      0.000       0.024       0.032\n",
+       "==============================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_model = smf.poisson(formula = 'pat_dnm ~ Father_age', data = df_final)\n",
+    "results_pat = model.fit()\n",
+    "results_pat.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Poisson' object has no attribute 'params'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-180-f9401ceb4224>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mp_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Poisson' object has no attribute 'params'"
+     ]
+    }
+   ],
+   "source": [
+    "p_model.params"
    ]
   },
   {
