--- a/day4-lunch/Day4-lunch.ipynb
+++ b/day4-lunch/Day4-lunch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,11 @@
     "    if 'protein_coding' not in line:\n",
     "        continue      \n",
     "    else:\n",
-    "        fields = line.strip().split()\n",
+    "        fields = line.rstrip().split()\n",
     "        ind_gene = fields.index('gene_name')\n",
     "        gene_name = fields[ind_gene + 1]\n",
+    "        #remove semicolon\n",
+    "        gene_name = gene_name[:-1]\n",
     "        #print(fields)  \n",
     "    if (fields[0] == '3R' and fields[2] == 'gene'):\n",
     "        foi.append([gene_name, int(fields[3]), int(fields[4])])\n",
@@ -36,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Closest gene is \"tin\";\n",
+      "Closest gene is \"tin\"\n",
       "Loop count is 13\n"
      ]
     }
@@ -51,6 +53,7 @@
    "source": [
     "low = 0\n",
     "high = (len(foi) - 1)\n",
+    "#index must be an integer\n",
     "mid= int(len(foi)/2)\n",
     "\n",
     "\n",
@@ -58,7 +61,6 @@
     "counter = 0\n",
     "counter2 = 0\n",
     "while counter < 1:\n",
-    "    counter2 +=1\n",
     "    if high == low + 1:\n",
     "        if (pos - foi[low][2]) > (foi[high][1] - pos):\n",
     "            output =(foi[high])\n",
@@ -76,7 +78,7 @@
     "        else:\n",
     "            output =(foi[pos])\n",
     "            counter +=1\n",
-    "            \n",
+    "    counter2 +=1       \n",
     "\n",
     "print('Closest gene is', output[0])\n",
     "print('Loop count is', counter2)         "
@@ -84,27 +86,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n"
+      "Distance from gene 27\n"
      ]
     }
    ],
    "source": [
     "if output[1] > pos:\n",
     "    dist = output[1] - pos\n",
-    "    print(dist)\n",
     "elif output[1] < pos:\n",
     "    dist = pos - output[1]\n",
-    "    print(dist)\n",
     "else:\n",
     "    dist= output[2] - pos\n",
-    "    print('Distance from gene ', dist)"
+    "print('Distance from gene', dist)"
    ]
   },
   {
