--- a/QuantLab3/QuantLab3 - HW.ipynb
+++ b/QuantLab3/QuantLab3 - HW.ipynb
@@ -869,29 +869,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 567,
    "metadata": {},
    "outputs": [],
    "source": [
     "phen = open('phenotypes.txt', 'w')\n",
-    "header =0\n",
+    "counter =0\n",
     "with open('./BYxRM_PhenoData.txt' , 'r') as phenotypes:\n",
     "    for line in phenotypes:\n",
-    "        if header == 0:\n",
+    "        if counter == 0:\n",
     "            fields = line\n",
     "            fields = fields.split('\\t')\n",
     "            fields[0] = 'IID'\n",
     "            fields.insert(0, 'FID')\n",
-    "            header2 = ''\n",
+    "            header = ''\n",
     "            for name in fields:\n",
-    "                if header2 == '':\n",
-    "                    header2 = header2 + name\n",
+    "                if header == '':\n",
+    "                    header = header + name\n",
     "                    continue\n",
     "                else:\n",
-    "                    header2 = header2 + '\\t' + name\n",
-    "            #print(header2)\n",
-    "            phen.write(header2)\n",
-    "            header = 1\n",
+    "                    header = header + '\\t' + name\n",
+    "            #print(header)\n",
+    "            phen.write(header)\n",
+    "            counter += 1\n",
     "            continue\n",
     "        newline = line.replace('_', '\\t')\n",
     "        phen.write(newline)\n",
@@ -3180,9 +3180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 575,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reference is C alternate is G\n"
+     ]
+    }
+   ],
    "source": [
     "file = open('./num_chr.vcf', 'r')\n",
     "head = []\n",
@@ -3196,7 +3204,10 @@
     "        #isolate SNP of interest\n",
     "        if 'chrII' and '795756' in line:\n",
     "            oi= line.split('\\t')\n",
+    "            ref = oi[3]\n",
+    "            alt= oi[4]\n",
     "            info.append(oi[9:])\n",
+    "print('reference is', ref, 'alternate is', alt)\n",
     "#Make list of GTs\n",
     "genotypes = []\n",
     "for samp in info[0]:\n",
@@ -3208,37 +3219,54 @@
     "#Make list of GT values into a DataFrame\n",
     "df = pd.DataFrame(data = genotypes)\n",
     "#Add sample IDs to DataFrame\n",
-    "df['sample']= head[0]\n",
+    "df['sampleID']= head[0]\n",
     "#df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 571,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load phenotype data into its own dataframe and isolate cadmium phenotype\n",
     "allphen = pd.read_csv('./BYxRM_PhenoData.txt', sep = '\\s+')\n",
     "cad = allphen.iloc[:,0]\n",
-    "cad = pd.DataFrame(cad).rename_axis('sample')\n",
+    "cad = pd.DataFrame(cad).rename_axis('sampleID')\n",
     "#cad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 579,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1/1    480\n",
+       "0/0    476\n",
+       "./.     43\n",
+       "0/1      9\n",
+       "Name: 0, dtype: int64"
+      ]
+     },
+     "execution_count": 579,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#merge genotype and phenotype dfs on sample id\n",
-    "assoc = pd.merge(df, cad, on = 'sample')\n",
-    "#assoc\n"
+    "assoc = pd.merge(df, cad, on = 'sampleID')\n",
+    "assoc\n",
+    "#see possible genotypes\n",
+    "assoc[0].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 573,
    "metadata": {
     "scrolled": true
    },
@@ -3257,17 +3285,17 @@
        "1005    A11_94\n",
        "1006    A11_95\n",
        "1007    A11_96\n",
-       "Name: sample, Length: 1008, dtype: object"
+       "Name: sampleID, Length: 1008, dtype: object"
       ]
      },
-     "execution_count": 563,
+     "execution_count": 573,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#remove sample ID\n",
-    "assoc.pop('sample')"
+    "assoc.pop('sampleID')"
    ]
   },
   {
@@ -3276,7 +3304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#separate datafreame based on genotype using boolean indexing\n",
+    "#separate dataframe based on genotype using boolean indexing\n",
     "CC = assoc.iloc[:, 0] == '0/0'\n",
     "CG = assoc.iloc[:, 0] == '0/1'\n",
     "GG = assoc.loc[:,0] == '1/1'\n",
