--- a/QuantLab3/QuantLab3 - HW.ipynb
+++ b/QuantLab3/QuantLab3 - HW.ipynb
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 580,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,8 +878,7 @@
     "with open('./BYxRM_PhenoData.txt' , 'r') as phenotypes:\n",
     "    for line in phenotypes:\n",
     "        if counter == 0:\n",
-    "            fields = line\n",
-    "            fields = fields.split('\\t')\n",
+    "            fields = line.split('\\t')\n",
     "            fields[0] = 'IID'\n",
     "            fields.insert(0, 'FID')\n",
     "            header = ''\n",
