renamed boxplot xaxis

--- a/QuantLab3/QuantLab3 - HW.ipynb
+++ b/QuantLab3/QuantLab3 - HW.ipynb
@@ -4137,7 +4137,7 @@
     "fig, ax = plt.subplots()\n",
     "#plot using keys as lables\n",
     "ax.boxplot(gen_dict.values(), labels = gen_dict.keys())\n",
-    "ax.set_xlabel('Genotype compared to reference')\n",
+    "ax.set_xlabel('Genotype')\n",
     "ax.set_ylabel('Cadmium Chloride Phenotypic Distribution')\n",
     "ax.set_title('Genotype effect on Cadmium Chloride phenotype')\n",
     "plt.show()"
