removed unnecessary ish

--- a/week4/QuantLab4_startover.ipynb
+++ b/week4/QuantLab4_startover.ipynb
@@ -138,6 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#need to figure out why some are only 7136 but will do this for now\n",
     "for seq in t_c:\n",
     "    if len(seq) != 7137:\n",
     "        seq.append('---')"
@@ -149,7 +150,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "changes = {}\n",
     "codon_l = []\n",
     "dS_l= []\n",
     "dN_l =[]\n",
@@ -165,9 +165,6 @@
     "        elif alt != ref:\n",
     "            if alt not in codontable.keys():\n",
     "                continue\n",
-    "            #elif alt not in codontable.keys():\n",
-    "             #   continue\n",
-    "            #else:\n",
     "            if codontable[alt] == codontable[ref]:\n",
     "                dS +=1\n",
     "            else:\n",
@@ -181,9 +178,7 @@
     "        codon_l.append(i)\n",
     "        dS_l.append(dS)\n",
     "        dN_l.append(dN)\n",
-    "       # D = dN/dS\n",
-    "   # changes.setdefault(i, D)\n",
-    "#print(changes)"
+    "  "
    ]
   },
   {
@@ -710,6 +705,7 @@
     }
    ],
    "source": [
+    "#this can't be right\n",
     "fig, ax = plt.subplots()\n",
     "ax = plt.scatter(df.iloc[:, 0], df.iloc[:, 5], c = 'orange')\n",
     "plt.xlabel('Codons')\n",
@@ -718,122 +714,6 @@
     "df_sig = df.loc[significant, :]\n",
     "plt.scatter(df_sig.iloc[:, 0], df_sig.iloc[:, 5], c = 'red')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "codon_changes = 0\n",
-    "mut = {}\n",
-    "for cod_seq in t_c:\n",
-    "    for i in range(0, 7137):\n",
-    "        cod1 = q_c[i]\n",
-    "        cod2 = cod_seq[i]\n",
-    "        if cod1 == cod2:\n",
-    "            continue\n",
-    "        else:\n",
-    "            codon_changes+=1\n",
-    "            mut.setdefault(i, '')\n",
-    "            counter = 0\n",
-    "            if i in mut.keys():\n",
-    "                counter +=1\n",
-    "                mut[i] = counter\n",
-    "                \n",
-    "#print(mut.keys())          \n",
-    "#print(mut.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_a = []\n",
-    "for seq in t_c:\n",
-    "    new_aa = []\n",
-    "    for cod in seq:\n",
-    "        if cod in codontable.keys():\n",
-    "            aa = codontable[cod]\n",
-    "            new_aa.append(aa)\n",
-    "        else:\n",
-    "            new_aa.append('-')\n",
-    "    t_a.append(new_aa)\n",
-    "#print(len(t_a))\n",
-    "#print(t_a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nonsynom = 0\n",
-    "nonsynonymous = {}\n",
-    "for aa_seq in t_a:\n",
-    "    for i in range(0, 7137):\n",
-    "        aa1 = q_a[i]\n",
-    "        aa2 = aa_seq[i]\n",
-    "        if aa1 == aa2:\n",
-    "            continue\n",
-    "        else:\n",
-    "            nonsynonymous.setdefault(i, '')\n",
-    "            nonsynom+=1\n",
-    "            counter = 0\n",
-    "            if i in nonsynonymous.keys():\n",
-    "                counter +=1\n",
-    "                nonsynonymous[i] = counter\n",
-    "#print(nonsynom)            \n",
-    "#print(location[0:1000])\n",
-    "#print(nonsynonymous.keys())\n",
-    "#print(nonsynonymous.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n"
-     ]
-    }
-   ],
-   "source": [
-    "NS = {}\n",
-    "syn= {}\n",
-    "for k, v in mut.items():\n",
-    "    if k in nonsynonymous.keys():\n",
-    "        NS.setdefault(k, v)\n",
-    "    else:\n",
-    "        syn.setdefault(k, v)\n",
-    "#print(NS)  \n",
-    "print(syn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set()\n"
-     ]
-    }
-   ],
-   "source": [
-    "diff = mut.keys()- nonsynonymous.keys()\n",
-    "print(diff)"
    ]
   },
   {
