--- a/week5/Week_5_plots.ipynb
+++ b/week5/Week_5_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -181,7 +181,7 @@
        "[14633 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "exon        7317\n",
+       "intron      6217\n",
+       "promoter    1099\n",
+       "Name: promoter, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_f.iloc[:, 3].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +225,7 @@
        "32"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,173 +242,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>chr19</th>\n",
-       "      <th>3197214</th>\n",
-       "      <th>3198214</th>\n",
-       "      <th>promoter</th>\n",
-       "      <th>.</th>\n",
-       "      <th>-</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>3289087</td>\n",
-       "      <td>3292436</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>+</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>3371677</td>\n",
-       "      <td>3375093</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>+</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>3622726</td>\n",
-       "      <td>3628273</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>3586480</td>\n",
-       "      <td>3590974</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>369</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>3944296</td>\n",
-       "      <td>3947007</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>+</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14389</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>60160280</td>\n",
-       "      <td>60161061</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>+</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14423</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>60545541</td>\n",
-       "      <td>60563162</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14551</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>60890631</td>\n",
-       "      <td>60987702</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>+</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14573</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>61083269</td>\n",
-       "      <td>61086072</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>+</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14593</th>\n",
-       "      <td>chr19</td>\n",
-       "      <td>61058276</td>\n",
-       "      <td>61127007</td>\n",
-       "      <td>intron</td>\n",
-       "      <td>.</td>\n",
-       "      <td>-</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>233 rows × 7 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       chr19   3197214   3198214 promoter  .  -  0\n",
-       "53     chr19   3289087   3292436   intron  .  +  1\n",
-       "81     chr19   3371677   3375093   intron  .  +  1\n",
-       "195    chr19   3622726   3628273   intron  .  -  1\n",
-       "223    chr19   3586480   3590974   intron  .  -  2\n",
-       "369    chr19   3944296   3947007   intron  .  +  1\n",
-       "...      ...       ...       ...      ... .. .. ..\n",
-       "14389  chr19  60160280  60161061   intron  .  +  1\n",
-       "14423  chr19  60545541  60563162   intron  .  -  1\n",
-       "14551  chr19  60890631  60987702   intron  .  +  1\n",
-       "14573  chr19  61083269  61086072   intron  .  +  1\n",
-       "14593  chr19  61058276  61127007   intron  .  -  3\n",
-       "\n",
-       "[233 rows x 7 columns]"
+       "1    30\n",
+       "2     1\n",
+       "Name: 0, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_ex_true_count.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "275"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +290,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    200\n",
+       "2     26\n",
+       "3      5\n",
+       "4      2\n",
+       "Name: 0, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_int_true_count.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,6 +324,28 @@
     "g_p_true = g_p.loc[g_p_true,:]\n",
     "g_p_true_count = g_p_true.iloc[:, 6]\n",
     "g_p_sum = g_p_true_count.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    41\n",
+       "2     1\n",
+       "Name: 0, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_p_true_count.value_counts()"
    ]
   },
   {
@@ -436,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +536,7 @@
        "[14633 rows x 7 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +557,7 @@
        "52"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +574,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    48\n",
+       "2     2\n",
+       "Name: 0, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e_ex_true_count.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +605,7 @@
        "298"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +622,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    220\n",
+       "2     27\n",
+       "3      8\n",
+       "Name: 0, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e_int_true_count.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +654,7 @@
        "55"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,6 +667,28 @@
     "e_p_true_count = e_p_true.iloc[:, 6]\n",
     "e_p_sum = e_p_true_count.sum()\n",
     "e_p_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    51\n",
+       "2     2\n",
+       "Name: 0, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e_p_true_count.value_counts()"
    ]
   },
   {
